* Use URI(url).toURL() instead of URL(url) as the latter is deprecated.